--- a/style.css
+++ b/style.css
@@ -22,3 +22,46 @@ a {
 span {
     font-weight: bolder;
 }
+
+/* Header styles */
+header {
+    padding: 20px 35px;
+    background-color: #001A31;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    color: #C18DBB;
+}
+
+header h1 {
+    font-weight: bold;
+    font-size: 2em;
+    margin: 0;
+}
+
+header a, .contact a {
+    margin: .5em 30px;
+    text-decoration: none;
+    border-bottom: #019DD8 solid 3px;
+    padding: 5px;
+    font-size: 1.2em;
+    display: inline;
+}
+
+header a {
+    color: #C18DBB;
+}
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+a:hover {
+    transition: ease-in .5s;
+    background-color: #019dd8;
+}
+
