--- a/style.css
+++ b/style.css
@@ -65,3 +65,27 @@ a:hover {
     background-color: #019dd8;
 }
 
+/* Hero box styles */
+
+.hero h2 {
+    margin: 20px;
+    padding: 5px;
+    background-color: #C18DBB;
+    color: #001A31;
+    display: inline;
+}
+
+.hero {
+    position: relative;
+    text-align: center;
+    font-size: 2em;
+}
+  
+.bottom-right {
+    background-color: #C18DBB;
+    position: absolute;
+    bottom: .5em;
+    right: 1em;
+    font-size: .8em;
+} 
+
