--- a/style.css
+++ b/style.css
@@ -117,3 +117,26 @@ a:hover {
     height: 30vw;
 }
 
+/* Work Styles */
+
+.grid-item {
+    border: #019dd8 1px solid;
+    font-size: 30px;
+    position: relative;
+    height: 100px;
+    width: 100%;
+    background-size: cover;
+    background-position: -10%;
+}
+
+.section-2 {
+    grid-row: 1 / span 3;
+}
+
+.first {
+    height: 210px;
+    position: relative;
+    grid-row: 1 / span 2;
+    grid-column: 2 / span 2;
+}
+
