--- a/style.css
+++ b/style.css
@@ -156,3 +156,51 @@ a:hover {
     font-weight: bold;
 }
 
+/* Tablet View */
+@media (max-width: 800px) {
+
+    /* header in tablet view */
+    header {
+        font-size: 1.3em;
+        display: block;
+        text-align: center;
+   }
+
+   /* hero in tablet view */
+   .hero, .bottom-right {
+       font-size: 1.5em;
+   }
+
+    /* grid in tablet view */
+    .grid-container, .grid-container img, .contact-info a {
+        display: block;
+        margin: 10px auto;
+        text-align: center;
+    }
+    .section-1, .section-2, .section-3 {
+        border-bottom:  #019dd8 5px solid;
+        border-right:none;
+        text-align: center;
+        font-size: 2.3em;
+        padding: 5px;
+        margin-bottom: 15px;
+    }
+
+    /* about me in tablet view */
+    .about-me img {
+        height: 30vw;
+    }
+    
+
+    /* work in tablet view */
+    .first {
+        grid-row: 1 / span 1;
+        grid-column: 2 / span 1;
+    }
+    .grid-item {
+        height: 210px;
+        margin: 10px;
+    }   
+}
+
+
